{
    "version": 1,
    "name": "World",
    "maps": [
        {
            "name": "CameraSpectator",
            "id": "d9645100-4fed-44d7-85d6-47b1d9f657f0",
            "actions": [
                {
                    "name": "PointerStart",
                    "type": "Button",
                    "id": "91dc8d8a-f675-43ae-9cfb-9823d2a1f02c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "4d2dc76e-bf76-4604-bc8f-947c3a3bd284",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyboardMove",
                    "type": "Value",
                    "id": "2dd1542d-923c-4bc1-b4d1-815f9a259b01",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "23c2f991-aae7-4414-86ca-481f4b89fd27",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5bbda22b-7805-4c34-8721-9b67259cee20",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e730a8db-527b-49b6-a673-801751bc0b1e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6fd65c3c-5a75-4f0c-bdc8-1ba4e0b414ac",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9846c1b8-a2b9-4613-8795-6e5c5b0cabfe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "c4a409f2-f1b4-4a3a-9ef2-41f1a3333eda",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fe97b253-913f-41df-b6aa-7e849ab4ade7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a6c8fd61-3890-4645-8ef4-2fc7d8780aba",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8a14df27-0b02-4651-81c9-03d990906e7e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "deba8455-4c3d-4593-b987-725e2659567d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "54b32a13-c7c6-49b8-a26a-796fb7a32ef4",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bf05414-f3c8-4b47-81e4-4ad00b8b0729",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraZoom",
            "id": "80e9546f-5ac0-4223-83c0-13e45da9dc0a",
            "actions": [
                {
                    "name": "MouseZoom",
                    "type": "Value",
                    "id": "5a4e486c-12d3-4abf-a9d1-a426059d3351",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84c308a7-1bd4-4516-9f6e-692d60e12152",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "RequireModifier",
                    "processors": "",
                    "groups": "",
                    "action": "MouseZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BlockHovered",
            "id": "c9a935ca-16d7-482c-b1a1-182dd7a9e190",
            "actions": [
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "b796c25e-f94a-485d-aea6-ed21b0a4bacc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f1a1b6f-8e81-4f74-ad62-466c06f917a8",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BlockBreaking",
            "id": "3d5fbec3-de19-4a3d-9e81-b817afb6472b",
            "actions": [
                {
                    "name": "PointerPress",
                    "type": "Button",
                    "id": "37e268c5-4e48-4efe-85d2-453af3e08405",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0b30017-45a6-484a-a46d-3e6833fa11fc",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HoveredBlockPlacer",
            "id": "77b51039-ba94-4576-b4fe-c659cd777e47",
            "actions": [
                {
                    "name": "MouseFastRightClick",
                    "type": "Button",
                    "id": "ab00be39-48dd-4566-afab-99a651ef8b5f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseSlowRightClick",
                    "type": "Button",
                    "id": "651085b4-9d5d-4dee-b517-7aaf808305bd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9435f2ca-5ced-45e9-933e-ca2574401f0e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap(duration=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseFastRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84729a95-085b-47da-b2aa-9c73741cdb81",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.3)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseSlowRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HoveredBlockPicker",
            "id": "394ee511-d427-45f2-ba0d-15db1bad81bc",
            "actions": [
                {
                    "name": "MouseMiddleClick",
                    "type": "Button",
                    "id": "4175eeb0-f048-4646-9263-b9be6a6ba332",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2ab3c094-633f-471a-8d70-5034b62592a3",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "b575921d-9928-4311-b4e1-54065e32c53f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f77619cf-ccfc-49e5-a5e7-e43b851229a1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "62d04f32-d4d8-48a4-9321-4d40d4be52f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db98f536-429b-4586-805b-51531f037a9f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48f56f3b-f620-495d-9db0-11ec63206efe",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0525afae-c481-4e18-91aa-bfdd62b32922",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "241908fd-6818-4c14-ab03-f7fba20f6790",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "47c7085b-6a82-4dc8-af74-c7f8fb4db3da",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8ae31f6e-5c0b-4844-ab10-c57e77f13c9a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "0f5e6752-e67a-4227-91d0-5c10976a77eb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0597b730-b664-4254-9ad1-a001c7cdcf68",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "247f8339-5cf9-49d4-9a16-a6ce6fa3cd42",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "InventoryPlayer",
            "id": "465eb9ea-6e91-49d1-89ca-b3ecd7cf60b2",
            "actions": [
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "814a4616-ec2d-4db8-bd78-8385b93e1e8f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "16754cbb-6828-475e-93f7-94aaeafef035",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenForeign",
                    "type": "Button",
                    "id": "c634766c-b5ab-478b-a04e-f585b0362a13",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "51c3281d-6654-47f5-8ea5-166e8288bb99",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cd27d64-28d3-49b2-b1f0-eb72a5e982d2",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451c455c-dc41-471d-beca-0519fdb73fd6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenForeign",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InventoryPlayerHotbar",
            "id": "9ea46c91-2504-48f5-8868-280224b1a551",
            "actions": [
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "800d0bc0-a2ac-46a0-b32c-12cbe04b8e0d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e321a4d-79ab-492b-8830-bed8072441b1",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "RequireModifier(invert=true)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}